# ctera-jenkins-watchdog

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: pr-build.yml  release.yml
docs/: valkey-deployment.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: ScanContext.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Findings.tsx  JiraIssues.tsx
frontend/src/services/: api.ts
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  externalsecret.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
prompts/: system.md
scripts/: setup-dns.sh
src/jenkins_watchdog/: __init__.py  __main__.py  auth.py  config.py  main.py  scan_options.py  state.py
src/jenkins_watchdog/api/: chat.py  jira.py  models.py  router.py
src/jenkins_watchdog/checks/: __init__.py  agent_connectivity.py  agent_errors.py  agent_pods.py  agent_resources.py  agent_utils.py  base.py  jenkins_failed_builds.py  jenkins_jobs.py  jenkins_pipeline_patterns.py  k8s_events.py  k8s_nodes.py  k8s_workloads.py  registry.py
src/jenkins_watchdog/clients/: jenkins.py  k8s.py  valkey.py  (+3 more)
tests/: conftest.py
tests/test_checks/: test_agent_resources.py  test_agent_utils.py  test_base.py  test_jenkins_failed_builds.py  test_k8s_nodes.py  test_state.py
tests/test_clients/: test_k8s_metrics.py  test_log_analysis.py
tests/test_reasoning/: test_gate.py
(+9 files in other folders)
